--- a/dev/css/scss/partials/_variables.scss
+++ b/dev/css/scss/partials/_variables.scss
@@ -7,7 +7,9 @@
 $light-blue: $color-secondary-1-7; 		// #40659f
 $dark-blue: $color-secondary-1-8; 		// #1c2c46
 $light-blue-green: $color-primary-1;  	// #69969c
-$medium-green: $color-secondary-2-2; 	// #4C976D;
+$medium-green: $color-secondary-2-2; 	// #4C976D
+$grey-blue: $color-secondary-1-6; 		// #747F90
+
 /* --- fonts --- */
 @import "fonts";
 
