--- a/dev/style.css
+++ b/dev/style.css
@@ -5227,26 +5227,46 @@ button.close {
 /* serifs */
 /* sans-serif */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Oxygen", sans-serif;
   color: #222; }
 
-h3 {
-  font-size: 24px;
+h1 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 41px;
   font-weight: bold; }
 
-a {
-  color: white; }
+h2 {
+  font-size: 24px; }
+
+h3 {
+  margin-bottom: .75em;
+  font-size: 32px;
+  font-weight: bold; }
 
 /* --- sections --- */
 /* Patterns */
 /* Sections */
 /* _header.scss */
 .primary-header {
+  height: 275px;
   background: #40659f; }
+
+h1 small {
+  color: #69969c;
+  display: block; }
 
 /*	_content.scss	*/
 article {
+  padding: .5em 0em 2em 1em;
+  font-family: "Lora", serif;
   font-size: 22px; }
+
+hr {
+  width: 75%;
+  border-top: 1px dashed #aaa; }
+
+.jumbotron {
+  margin-bottom: 0; }
 
 /* _footer.scss */
 footer {
