--- a/dev/css/scss/partials/_content.scss
+++ b/dev/css/scss/partials/_content.scss
@@ -2,8 +2,9 @@
 
 article {
 	padding: .5em 0em 2em 1em;
-	font-family: $lora;
-	font-size: $md-txt;
+	font-family: $ubuntu;
+	font-size: 18px;
+	line-height: 1.5em;
 }
 
 hr {
@@ -12,3 +13,10 @@ hr {
 }
 
 .jumbotron {margin-bottom: 0;}
+.badge {
+	padding: 4px 9px !important;
+	background: $medium-green;
+	font-family: $oxygen;
+	color: #fff;
+	vertical-align: middle !important;
+}
