--- a/dev/style.css
+++ b/dev/style.css
@@ -3,7 +3,6 @@
 
 /* Vendor Dependencies */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
-@import url(http://fonts.googleapis.com/css?family=Arvo|Lora|Rokkitt);
 @import url(http://fonts.googleapis.com/css?family=PT+Sans+Narrow|Quicksand:400,700|Ubuntu|Josefin+Sans|Oxygen:400,700);
 html {
   font-family: sans-serif;
@@ -5222,26 +5221,29 @@ button.close {
 /* http://paletton.com */
 /* --- fonts --- */
 /* fonts.scss */
-/*	google serif fonts	https://www.google.com/fonts#UsePlace:use/Collection:Arvo|Lora|Rokkitt */
 /*	google sans fonts 	https://www.google.com/fonts#UsePlace:use/Collection:PT+Sans+Narrow|Quicksand:400,700|Ubuntu|Josefin+Sans|Oxygen:400,700 */
-/* serifs */
 /* sans-serif */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Oxygen", sans-serif;
-  color: #222; }
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: bold; }
 
 h1 {
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 41px;
-  font-weight: bold; }
+  font-size: 4em; }
 
 h2 {
-  font-size: 24px; }
+  font-size: 3.6em; }
 
 h3 {
-  margin-bottom: .75em;
-  font-size: 32px;
-  font-weight: bold; }
+  font-size: 3.2em; }
+
+h4 {
+  font-size: 2.8em; }
+
+h5 {
+  font-size: 2.4em; }
+
+h6 {
+  font-size: 2em; }
 
 /* --- sections --- */
 /* Patterns */
@@ -5249,17 +5251,22 @@ h3 {
 /* _header.scss */
 .primary-header {
   height: 275px;
-  background: #40659f; }
+  background: #1c2c46;
+  color: #7689a9; }
 
 h1 small {
-  color: #69969c;
+  margin-top: .15em;
   display: block; }
+
+.primary-menu {
+  background: #2c4770; }
 
 /*	_content.scss	*/
 article {
   padding: .5em 0em 2em 1em;
-  font-family: "Lora", serif;
-  font-size: 22px; }
+  font-family: "Ubuntu", sans-serif;
+  font-size: 18px;
+  line-height: 1.5em; }
 
 hr {
   width: 75%;
@@ -5267,6 +5274,13 @@ hr {
 
 .jumbotron {
   margin-bottom: 0; }
+
+.badge {
+  padding: 4px 9px !important;
+  background: #4c976d;
+  font-family: "Oxygen", sans-serif;
+  color: #fff;
+  vertical-align: middle !important; }
 
 /* _footer.scss */
 footer {
