--- a/dev/css/scss/partials/_variables.scss
+++ b/dev/css/scss/partials/_variables.scss
@@ -13,6 +13,7 @@ $grey-blue: $color-secondary-1-6; 			// #747F90
 
 $light-blue-green: $color-primary-1;  		// #69969c
 $medium-green: $color-secondary-2-2; 		// #4C976D
+$strong-green: $color-secondary-2-3; 		// #0F5B30
 
 
 /* --- fonts --- */
