--- a/dev/css/scss/partials/_content.scss
+++ b/dev/css/scss/partials/_content.scss
@@ -31,6 +31,16 @@ article p.blog-post-meta {
 article p.blog-post-meta a {
 	font-style: normal !important;
 }
-article p:first-child {
-	font-size: $md-txt;
+.post-nav-link {
+	margin-top: 50em;
 }
+.post-nav-link a {
+	height: 90px;
+	width: 90px;
+	display: block;
+	padding-top: 35px;
+	text-align: center;
+	border: 2px solid $dark-blue;
+	border-radius: 50%;
+}
+
