--- a/dev/styles/scss/modules/_layout.scss
+++ b/dev/styles/scss/modules/_layout.scss
@@ -30,9 +30,12 @@ hr {
 
 footer {
 	min-height: 10em;
-	margin-top: 2em;
 	background: $dark-blue;
 	font-family: $footer-font;
 	font-size: $sm-txt;
 	color: $footer-text-color;
+}
+
+footer p {
+	padding: 1em 0;
 }
