--- a/dev/styles/scss/partials/_footer.scss
+++ b/dev/styles/scss/partials/_footer.scss
@@ -1,7 +1,6 @@
 /* footer.scss #################### */
 .top-footer {
-	padding: 1em 0 .5em 0;
-	background: $light-blue;
+	background: $slight-light-blue;
 }
 
 /* /footer.scss #################### */
