--- a/dev/styles/scss/modules/_variables.scss
+++ b/dev/styles/scss/modules/_variables.scss
@@ -6,10 +6,9 @@ $footer-font: $quicksand;
 
 $lg-txt: 4em;
 //$lg-txt: 24px;
-//$md-txt: 22px; 
+$body-txt: 18px; 
 $sm-txt: 1.1em;
-
-
+$xsm-txt: 0.9em;
 
 // footer vars
-$footer-text-color: white;
+$footer-txt-color: white;
