--- a/dev/style.css
+++ b/dev/style.css
@@ -3762,15 +3762,14 @@ a.badge:hover, a.badge:focus {
 /* Authored Dependencies */
 /* Modules */
 /* color-codes.scss #################### */
-/* Palette URL: http://paletton.com/#uid=53l0n0kllllaFw0g0qFqFg0w0aF */
-/* Palette URL: http://paletton.com/#uid=13G0n0kllll6Urll1u5ledeGsfS */
-/* Main Secondary color (1-b) */
 /* typography.scss #################### */
 /*	google sans fonts 	https://www.google.com/fonts#UsePlace:use/Collection:PT+Sans+Narrow|Quicksand:400,700|Ubuntu|Josefin+Sans|Oxygen:400,700 */
 /* sans-serif */
 /*-- fonts --*/
 body {
-  font-family: "Ubuntu", sans-serif; }
+  font-family: "Ubuntu", sans-serif;
+  font-size: 18px;
+  line-height: 1.5em; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Josefin Sans", sans-serif;
@@ -3796,21 +3795,17 @@ h6 {
 
 article {
   margin-top: 3em;
-  padding: .5em 0em 2em 1em;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 18px;
-  line-height: 1.5em; }
+  padding: .5em 0em 2em 1em; }
 
 hr {
   width: 75%;
+  margin: 3em 0;
   border-top: 1px dashed #aaa; }
 
 footer {
-  min-height: 10em;
   background: #1c2c46;
   font-family: "Quicksand", sans-serif;
-  font-size: 1.1em;
-  color: white; }
+  font-size: 0.9em; }
 
 footer p {
   padding: 1em 0; }
@@ -3833,6 +3828,7 @@ h1 small {
   font-family: "Oxygen", sans-serif; }
 
 .primary-menu .nav a {
+  padding-bottom: 1em;
   color: #ededed; }
   .primary-menu .nav a:hover, .primary-menu .nav a:focus {
     background: #1c2c46; }
@@ -3862,18 +3858,53 @@ h1 small {
   vertical-align: middle !important; }
 
 article p.blog-post-meta {
-  margin-bottom: .5em;
-  font-size: 75%;
-  font-style: italic;
-  color: #0f5b30; }
+  margin-bottom: .75em;
+  font-size: 0.9em;
+  color: #40659f; }
 
 article p.blog-post-meta a {
   font-style: normal !important; }
 
+article footer.entry-meta {
+  padding: 5px 20px;
+  background: #f2f5f7;
+  border: 1px solid #ccc;
+  border-top: 5px solid #40659f;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  border-radius: 8px; }
+
+article footer.entry-meta p {
+  margin: 0;
+  padding: 0; }
+
 /* /content.scss #################### */
+.comments-container {
+  margin-top: 3em;
+  padding: 2em 0 2em 2em;
+  line-height: 1.3em;
+  background: #79b694;
+  border-bottom: 1px solid #052354; }
+
+ol.commentlist {
+  list-style-type: none; }
+
+article.comment {
+  width: 90%;
+  border: 1px solid #f2f5f7; }
+
 /* footer.scss #################### */
 .top-footer {
-  background: #2c4770; }
+  height: 10em;
+  background: #2c4770;
+  color: white; }
+
+.bottom-footer {
+  color: white; }
+
+.bottom-footer p {
+  padding: 0; }
 
 /* /footer.scss #################### */
 /* Sections */
