--- a/dev/styles/scss/partials/_content.scss
+++ b/dev/styles/scss/partials/_content.scss
@@ -1,6 +1,7 @@
 /* content.scss #################### */
 
 .jumbotron {margin-bottom: 0;}
+
 .badge {
 	padding: 4px 9px !important;
 	background: $medium-green;
@@ -10,12 +11,27 @@
 }
 
 article p.blog-post-meta {
-	margin-bottom: .5em;
-	font-size: 75%;
-	font-style: italic;
-	color: $strong-green;
+	margin-bottom: .75em;
+	font-size: $xsm-txt;
+	//font-style: italic;
+	color: $light-blue;
 }
 article p.blog-post-meta a {
 	font-style: normal !important;
 }
+
+article footer.entry-meta {
+	padding: 5px 20px;
+	background: $light-light-grey;
+	border: 1px solid #ccc;
+	border-top: 5px solid $light-blue;
+	@include border-radius(8px);
+}
+article footer.entry-meta h4 {}
+article footer.entry-meta p {
+	margin: 0;
+	padding: 0;
+}
+
+
 /* /content.scss #################### */
