--- a/dev/styles/scss/partials/_content.scss
+++ b/dev/styles/scss/partials/_content.scss
@@ -10,25 +10,32 @@
 	vertical-align: middle !important;
 }
 
-article p.blog-post-meta {
-	margin-bottom: .75em;
-	font-size: $xsm-txt;
-	//font-style: italic;
-	color: $light-blue;
-}
-article p.blog-post-meta a {
-	font-style: normal !important;
+
+.blog-author-meta {
+	padding-bottom: 3em;
+	background-color: $light-light-grey;
 }
 
-article footer.entry-meta {
+p.blog-post-meta-category {
+	margin-bottom: .75em;
+	font-size: $xsm-txt;
+	color: $light-blue;
+	
+	> a {
+	font-style: normal !important;
+	}
+}
+
+footer.post-author-meta {
+	margin-top: 2em;
 	padding: 5px 20px;
-	background: $light-light-grey;
+	background: #fff;
 	border: 1px solid #ccc;
 	border-top: 5px solid $light-blue;
 	@include border-radius(8px);
 }
-article footer.entry-meta h4 {}
-article footer.entry-meta p {
+footer.post-author-meta h4 {}
+footer.post-author-meta p {
 	margin: 0;
 	padding: 0;
 }
