--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -11,17 +11,14 @@
 @import "scss/modules/mixins";
 @import "scss/modules/layout";
 
-/* Partials */
-@import "scss/partials/header";
+/* Partials - Elements */
 @import "scss/partials/navigation";
+
+/* Partials - Sections */
+@import "scss/partials/header";
 @import "scss/partials/content";
 @import "scss/partials/comments";
 @import "scss/partials/footer";
-
-/* Sections */
-//@import "scss/partials/header";
-//@import "scss/partials/content";
-//@import "scss/partials/footer";
 
 
 
