--- a/dev/style.css
+++ b/dev/style.css
@@ -254,6 +254,7 @@ th {
   font-family: 'Glyphicons Halflings';
   src: url("bootstrap/glyphicons-halflings-regular.eot");
   src: url("bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg"); }
+
 .glyphicon {
   position: relative;
   top: 1px;
@@ -878,7 +879,7 @@ th {
 
 html {
   font-size: 62.5%;
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -3591,6 +3592,7 @@ a.badge:hover, a.badge:focus {
 
 @-ms-viewport {
   width: device-width; }
+
 .visible-xs, .visible-sm, .visible-md, .visible-lg {
   display: none !important; }
 
@@ -3797,7 +3799,8 @@ article {
 
 hr {
   width: 75%;
-  margin: 3em 0;
+  margin-top: 3em;
+  margin-bottom: 2em;
   border-top: 1px dashed #aaa; }
 
 footer {
@@ -3857,15 +3860,22 @@ h1 small {
   vertical-align: middle !important; }
 
 .blog-author-meta {
+  padding-top: 1em;
   padding-bottom: 3em;
   background-color: #f2f5f7; }
 
 p.blog-post-meta-category {
-  margin-bottom: .75em;
-  font-size: 0.9em;
+  margin-bottom: .05em;
+  font-size: 70%;
+  color: #222; }
+
+p.blog-post-meta-tags {
+  font-size: 70%;
   color: #40659f; }
-  p.blog-post-meta-category > a {
-    font-style: normal !important; }
+
+p.blog-post-meta-category a, p.blog-post-meta-tags a {
+  color: #40659f;
+  font-style: normal !important; }
 
 footer.post-author-meta {
   margin-top: 2em;
@@ -3878,9 +3888,18 @@ footer.post-author-meta {
   -ms-border-radius: 8px;
   border-radius: 8px; }
 
+footer.post-author-meta img {
+  margin-top: 1em;
+  margin-left: 0.5em; }
+
+footer.post-author-meta h4 {
+  margin-top: 0.5em;
+  margin-bottom: 0; }
+
 footer.post-author-meta p {
   margin: 0;
-  padding: 0; }
+  padding-top: 0;
+  padding-bottom: 2em; }
 
 /* /content.scss #################### */
 .comments-container {
