--- a/dev/styles/scss/partials/_content.scss
+++ b/dev/styles/scss/partials/_content.scss
@@ -12,18 +12,23 @@
 
 
 .blog-author-meta {
+	padding-top: 1em;
 	padding-bottom: 3em;
 	background-color: $light-light-grey;
 }
 
 p.blog-post-meta-category {
-	margin-bottom: .75em;
-	font-size: $xsm-txt;
+	margin-bottom: .05em;
+	font-size: 70%;
+	color: #222;
+}
+p.blog-post-meta-tags {
+	font-size: 70%;
+	color: $light-blue;	
+}
+p.blog-post-meta-category a, p.blog-post-meta-tags a {
 	color: $light-blue;
-	
-	> a {
 	font-style: normal !important;
-	}
 }
 
 footer.post-author-meta {
@@ -34,10 +39,18 @@ footer.post-author-meta {
 	border-top: 5px solid $light-blue;
 	@include border-radius(8px);
 }
-footer.post-author-meta h4 {}
+footer.post-author-meta img {
+	margin-top: 1em;
+	margin-left: 0.5em;
+}
+footer.post-author-meta h4 {
+	margin-top: 0.5em;
+	margin-bottom: 0;
+}
 footer.post-author-meta p {
 	margin: 0;
-	padding: 0;
+	padding-top: 0;
+	padding-bottom: 2em;
 }
 
 
