--- a/dev/styles/scss/partials/_comments.scss
+++ b/dev/styles/scss/partials/_comments.scss
@@ -1,5 +1,6 @@
 .comments-container {
 	padding: 2em 0 2em 2em;
+	font-size: $xsm-txt;
 	line-height: 1.3em;
 	background: $basic-green;
 	border-bottom: 1px solid $dark-dark-blue;
@@ -7,13 +8,14 @@
 
 .comments-container h4 {}
 p.post-comments {}
-ol.commentlist {
-	list-style-type: none;
-}
+ol.commentlist {list-style-type: none;}
 ol.commentlist li {}
 article.comment {
 	width: 90%;
 	border: 1px solid $light-light-grey;
+	img.avatar {
+		padding-right: 1em;
+	}
 }
 img.avatar {}
 span.comment-name {}
