--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -17,6 +17,7 @@
 /* Partials - Sections */
 @import "scss/partials/header";
 @import "scss/partials/content";
+@import "scss/partials/sidebar";
 @import "scss/partials/comments";
 @import "scss/partials/footer";
 
