--- a/dev/styles/scss/partials/_content.scss
+++ b/dev/styles/scss/partials/_content.scss
@@ -10,15 +10,14 @@
 	vertical-align: middle !important;
 }
 
-
+.blog-post-meta-published {font-size: 80%;color:$medium-green;}
 .blog-author-meta {
 	padding-top: 1em;
 	padding-bottom: 3em;
 	background-color: $light-light-grey;
 }
-
 p.blog-post-meta-category {
-	margin-bottom: .05em;
+	margin-bottom: 0.05em;
 	font-size: 70%;
 	color: #222;
 }
@@ -33,6 +32,7 @@ p.blog-post-meta-category a, p.blog-post-meta-tags a {
 
 footer.post-author-meta {
 	margin-top: 2em;
+	margin-bottom: 4em;
 	padding: 5px 20px;
 	background: #fff;
 	border: 1px solid #ccc;
