--- a/dev/styles/scss/modules/_variables.scss
+++ b/dev/styles/scss/modules/_variables.scss
@@ -5,10 +5,11 @@ $nav-font: $oxygen;
 $footer-font: $quicksand;
 
 $lg-txt: 4em;
-//$lg-txt: 24px;
-$body-txt: 18px; 
 $sm-txt: 1.1em;
 $xsm-txt: 0.9em;
+
+$body-txt: 18px;
+$sidebar-txt-size: 0.7em;
 
 // footer vars
 $footer-txt-color: white;
