--- a/dev/styles/scss/partials/_sidebar.scss
+++ b/dev/styles/scss/partials/_sidebar.scss
@@ -1,7 +1,8 @@
 #sidebar {
 	margin-top: 3em;
 	padding: 0.5em;
-	font-size: $xsm-txt;
+	font-size: $sidebar-txt-size;
 	font-family: $oxygen;
+	line-height: 1.3em;
 	border: 1px solid $strong-green;
 }
