--- a/dev/styles/scss/modules/_layout.scss
+++ b/dev/styles/scss/modules/_layout.scss
@@ -6,7 +6,16 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: $heading-font;
 	font-weight: bold;
 }
-h1 {font-size: $lg-txt;}
+h1 {
+	font-size: $lg-txt;
+	small {
+		padding-top: .25em;
+		display: block;
+		font-family: $ubuntu;
+		font-size: 18px;
+		color: $medium-green;
+	}
+}
 h2 {font-size: ($lg-txt * .9);}
 h3 {font-size: ($lg-txt * .8);}
 h4 {font-size: ($lg-txt * .7);}
@@ -16,7 +25,7 @@ h6 {font-size: ($lg-txt * .5);}
 a {}
 
 article {
-	margin-top: 3em; 
+	margin-top: 2em; 
 	padding: .5em 0em 2em 1em;
 	small {
 		font-family: $ubuntu;
