--- a/dev/styles/scss/partials/_navigation.scss
+++ b/dev/styles/scss/partials/_navigation.scss
@@ -1,3 +1,4 @@
+/* navigation.scss	#################### */
 /*-- header nav --*/
 .primary-menu {
 	background: $slight-light-blue;
@@ -25,3 +26,4 @@
 	border: 2px solid $dark-blue;
 	border-radius: 50%;
 }
+/* /navigation.scss	#################### */
