--- a/dev/style.css
+++ b/dev/style.css
@@ -69,33 +69,33 @@ footer p {
 /*-- bootstrap tweaks --*/
 .navbar {
   margin-bottom: 0;
-  border: none; }
+  border: none;
+  border-radius: 0; }
 
 .navbar-brand {
   color: #4c976d !important; }
 
-.navbar-default .navbar-nav > li > a {
-  color: white; }
-  .navbar-default .navbar-nav > li > a:hover {
-    background-color: #1c2c46;
-    color: #40659f; }
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .open > a {
-  background-color: #1c2c46;
-  color: #40659f; }
-
-/* navigation.scss	#################### */
-/*-- header nav --*/
-.primary-menu {
+.navbar-default {
   background: #2c4770;
   font-family: "Oxygen", sans-serif; }
+  .navbar-default .navbar-nav > li a {
+    color: white; }
+    .navbar-default .navbar-nav > li a:hover {
+      background-color: #1c2c46;
+      color: #40659f; }
+  .navbar-default .navbar-nav > li.active > a, .navbar-default .navbar-nav > li.active > a:hover, .navbar-default .navbar-nav > li.active > a:focus, .navbar-default .navbar-nav > li.open > a, .navbar-default .navbar-nav > li.open > a:hover, .navbar-default .navbar-nav > li.open > a:focus {
+    background-color: #1c2c46;
+    color: #40659f; }
+  .navbar-default .navbar-collapse {
+    border: none; }
+  .navbar-default .navbar-nav .open .dropdown-menu {
+    background-color: #1c2c46; }
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+      color: white; }
+      .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+        background-color: #2c4770; }
 
-.primary-menu .nav a {
-  padding-bottom: 1em;
-  color: #ededed; }
-  .primary-menu .nav a:hover, .primary-menu .nav a:focus {
-    background: #1c2c46; }
-
+/* navigation.scss	#################### */
 /*-- post nav --*/
 .post-nav-link {
   margin-top: 50em; }
