--- a/dev/styles/scss/partials/_overboots.scss
+++ b/dev/styles/scss/partials/_overboots.scss
@@ -1,4 +1,6 @@
-/*-- bootstrap tweaks --*/
+/*-- bootstrap class over-writes --*/
+
+/*-- navigation --*/
 .navbar {
 	margin-bottom: 0;
 	border: none;
