closes #19, closes #14, started #10, started #29

--- a/dev/style.css
+++ b/dev/style.css
@@ -3,22 +3,24 @@
 /* Authored Dependencies */
 /* Modules */
 /* color-codes.scss #################### */
+/* /color-codes.scss #################### */
 /* typography.scss #################### */
 /*	google sans fonts 	https://www.google.com/fonts#UsePlace:use/Collection:PT+Sans+Narrow|Quicksand:400,700|Ubuntu|Josefin+Sans|Oxygen:400,700 */
 @import url(http://fonts.googleapis.com/css?family=PT+Sans+Narrow|Quicksand:400,700|Ubuntu|Josefin+Sans|Oxygen:400,700);
 /* sans-serif */
 /*-- fonts --*/
+/* layout.scss #################### */
 body {
   font-family: "Ubuntu", sans-serif;
   font-size: 18px;
   line-height: 1.5em; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Josefin Sans", Helvetica, sans-serif;
   font-weight: bold; }
 
 h1 {
-  font-size: 4em; }
+  font-size: 64px; }
   h1 small {
     padding-top: .25em;
     display: block;
@@ -27,19 +29,22 @@ h1 {
     color: #4c976d; }
 
 h2 {
-  font-size: 3.6em; }
+  font-size: 57px; }
 
 h3 {
-  font-size: 3.2em; }
+  font-size: 51px; }
 
 h4 {
-  font-size: 2.8em; }
+  font-size: 44px; }
 
 h5 {
-  font-size: 2.4em; }
+  font-size: 40px; }
 
 h6 {
-  font-size: 2em; }
+  font-size: 30px; }
+
+h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
+  font-size: 45%; }
 
 article {
   margin-top: 2em;
@@ -48,8 +53,7 @@ article {
   article h4 {
     margin-top: 1em; }
   article small {
-    font-family: "Ubuntu", sans-serif;
-    font-size: 25%; }
+    font-family: "Ubuntu", sans-serif; }
   article img {
     margin: 0.5em 1em; }
 
@@ -59,6 +63,7 @@ hr {
   margin-bottom: 2em;
   border-top: 1px dashed #aaa; }
 
+/* /layout.scss #################### */
 footer {
   background: #1c2c46;
   font-family: "Quicksand", sans-serif;
@@ -98,6 +103,10 @@ footer p {
       .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
         background-color: #2c4770; }
 
+/*-- body styles --*/
+ul.pager {
+  font-size: 14px; }
+
 /* navigation.scss	#################### */
 /*-- post nav --*/
 .post-nav-link {
@@ -118,7 +127,13 @@ footer p {
 .primary-header {
   min-height: 275px;
   background: #1c2c46;
+  background-image: url("images/500-circle.png");
+  background-position: center center;
+  background-repeat: no-repeat;
   color: #7689a9; }
+
+.primary-header h1 {
+  color: #79b694; }
 
 /* /header.scss #################### */
 /* content.scss #################### */
@@ -186,7 +201,7 @@ footer.post-author-meta {
   padding: 2em 0 2em 2em;
   font-size: 0.9em;
   line-height: 1.3em;
-  background: #79b694;
+  background: #4c976d;
   border-bottom: 1px solid #052354; }
 
 ol.commentlist {
@@ -194,9 +209,16 @@ ol.commentlist {
 
 article.comment {
   width: 90%;
-  border: 1px solid #f2f5f7; }
+  padding-right: 1.25em;
+  padding-left: 1.25em;
+  background: #79b694;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  border-radius: 8px; }
   article.comment img.avatar {
-    padding-right: 1em; }
+    margin: 1em 0;
+    padding-right: 0.5em; }
 
 /* footer.scss #################### */
 .top-footer {
