--- a/dev/styles/scss/modules/_colors.scss
+++ b/dev/styles/scss/modules/_colors.scss
@@ -12,3 +12,4 @@ $light-light-grey: #F2F5F7;
 $basic-green: #79B694;
 $medium-green: #4C976D;
 $strong-green: #0F5B30;
+/* /color-codes.scss #################### */
