--- a/dev/styles/scss/modules/_layout.scss
+++ b/dev/styles/scss/modules/_layout.scss
@@ -1,3 +1,4 @@
+/* layout.scss #################### */
 html {}
 body {
 	@include base-text-style;
@@ -7,7 +8,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: bold;
 }
 h1 {
-	font-size: $lg-txt;
+	font-size: $h1-size;
 	small {
 		padding-top: .25em;
 		display: block;
@@ -16,11 +17,14 @@ h1 {
 		color: $medium-green;
 	}
 }
-h2 {font-size: ($lg-txt * .9);}
-h3 {font-size: ($lg-txt * .8);}
-h4 {font-size: ($lg-txt * .7);}
-h5 {font-size: ($lg-txt * .6);}
-h6 {font-size: ($lg-txt * .5);}
+h2 {font-size: $h2-size;}
+h3 {font-size: $h3-size;}
+h4 {font-size: $h4-size;}
+h5 {font-size: $h5-size;}
+h6 {font-size: $h6-size;}
+h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
+	font-size: 45%;
+}
 
 a {}
 
@@ -31,7 +35,7 @@ article {
 	h4 { margin-top: 1em;}
 	small {
 		font-family: $ubuntu;
-		font-size: 25%;
+//		font-size: 25%;
 	}
 	img {
 		margin: 0.5em 1em;
@@ -44,7 +48,7 @@ hr {
 	margin-bottom: 2em;
 	border-top: 1px dashed #aaa;
 }
-
+/* /layout.scss #################### */
 
 footer {
 	background: $dark-blue;
