--- a/dev/styles/scss/modules/_typography.scss
+++ b/dev/styles/scss/modules/_typography.scss
@@ -5,5 +5,5 @@
 /* sans-serif */
 $quicksand: 'Quicksand', sans-serif;
 $ubuntu: 'Ubuntu', sans-serif;
-$josefin: 'Josefin Sans', sans-serif;
+$josefin: 'Josefin Sans', Helvetica, sans-serif;
 $oxygen: 'Oxygen', sans-serif;
