--- a/dev/styles/scss/partials/_header.scss
+++ b/dev/styles/scss/partials/_header.scss
@@ -2,7 +2,12 @@
 .primary-header {
 	min-height: 275px;
 	background: $dark-blue;
+	background-image: url('images/500-circle.png');
+	background-position: center center;
+	background-repeat: no-repeat;
 	color: $light-light-blue;
 }
-.primary-header h1 {}
+.primary-header h1 {
+	color: $basic-green;
+}
 /* /header.scss #################### */
