--- a/dev/styles/scss/partials/_comments.scss
+++ b/dev/styles/scss/partials/_comments.scss
@@ -1,3 +1,4 @@
+/* comments.scss #################### */
 .comments-container {
 	padding: 2em 0 2em 2em;
 	font-size: $xsm-txt;
@@ -26,3 +27,4 @@ article.comment p a {}
 span.comment-name {}
 span.comment-date {}
 div.comment-content {}
+/* /comments.scss #################### */
