--- a/dev/styles/scss/modules/_mixins.scss
+++ b/dev/styles/scss/modules/_mixins.scss
@@ -1,3 +1,4 @@
+/* mixins.scss #################### */
 @mixin base-text-style {
 	font-family: $body-font;
 	font-size: $body-txt;
@@ -10,3 +11,4 @@
       -ms-border-radius: $radius;
           border-radius: $radius;
 }
+/* /mixins.scss #################### */
