--- a/dev/styles/scss/modules/_variables.scss
+++ b/dev/styles/scss/modules/_variables.scss
@@ -1,12 +1,10 @@
+/* variables #################### */
 /*-- fonts --*/
 $heading-font: $josefin;
 $body-font: $ubuntu;
 $nav-font: $oxygen;
 $footer-font: $quicksand;
 
-$lg-txt: 4em;
-$sm-txt: 1.1em;
-$xsm-txt: 0.9em;
 $h1-size: 64px;
 $h2-size: 57px;
 $h3-size: 51px;
@@ -15,7 +13,8 @@ $h5-size: 40px;
 $h6-size: 30px;
 
 $body-txt: 18px;
-$sidebar-txt-size: 0.7em;
+$xsm-txt: 12px;
 
 // footer vars
 $footer-txt-color: white;
+/* /variables #################### */
