--- a/dev/styles/scss/partials/_footer.scss
+++ b/dev/styles/scss/partials/_footer.scss
@@ -1,13 +1,14 @@
 /* footer.scss #################### */
-
 .top-footer {
-	height: 10em;
+	min-height: 10em;
 	background: $slight-light-blue;
 	color: $footer-txt-color;
+	overflow: auto;
 }
 .bottom-footer {
 	color: $footer-txt-color;	
+	p {
+		padding: 0;
+	}
 }
-.bottom-footer p {padding: 0;}
-
 /* /footer.scss #################### */
