--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,6 +23,7 @@ Tags: HTML5, Bootstrap, bare, simple, blog
 /* Partials - Elements */
 @import "scss/partials/overboots";
 @import "scss/partials/navigation";
+//@import "scss/partials/plugins";
 
 /* Partials - Sections */
 @import "scss/partials/header";
