--- a/styles/scss/partials/_footer.scss
+++ b/styles/scss/partials/_footer.scss
@@ -8,7 +8,8 @@
 .bottom-footer {
 	color: $footer-txt-color;	
 	p {
-		padding: 0;
+		padding-top: 1em;
+		padding-bottom: 0.5em;
 	}
 }
 /* /footer.scss #################### */
