--- a/styles/scss/modules/_layout.scss
+++ b/styles/scss/modules/_layout.scss
@@ -18,7 +18,12 @@ h1 {
 	}
 }
 h2 {font-size: $h2-size;}
-h3 {font-size: $h3-size;}
+h3 {
+	font-size: $h3-size;
+	a {
+		font-size: ($h3-size - 11px);
+	}
+}
 h4 {font-size: $h4-size;}
 h5 {font-size: $h5-size;}
 h6 {font-size: $h6-size;}
@@ -29,10 +34,10 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
 a {}
 
 article {
-	margin-top: 2em; 
-	padding: 0.5em 0em 2em 1em;
+	margin-top: 1em; 
+	padding: 0.5em 0em 1em 1em;
 	h3,
-	h4 { margin-top: 1em;}
+	h4 { margin-top: 0.5em;}
 	small {
 		font-family: $ubuntu;
 //		font-size: 25%;
@@ -44,8 +49,8 @@ article {
 
 hr {
 	width: 75%;
-	margin-top: 3em;
-	margin-bottom: 2em;
+	margin-top: 1em;
+	margin-bottom: 0.5em;
 	border-top: 1px dashed #aaa;
 }
 /* /layout.scss #################### */
