--- a/styles/scss/partials/_content.scss
+++ b/styles/scss/partials/_content.scss
@@ -9,6 +9,10 @@
 }
 */
 
+.wp-post-image {
+	margin: 0 auto;
+	padding-bottom: 1.5em;
+}
 .wp-caption-text {
 	font-size: $xsm-txt;
 	color: $basic-green;
