--- a/style.css
+++ b/style.css
@@ -178,6 +178,26 @@ ul.pager {
   color: #79b694;
   font-style: italic; }
 
+.ng-frame-pager {
+  padding-top: 1em;
+  padding-bottom: 2.75em;
+  border-bottom: 2px dashed #69969c; }
+  .ng-frame-pager .col-sm-5 {
+    padding-left: 0;
+    padding-right: 0; }
+  .ng-frame-pager a {
+    width: 100%;
+    height: 100%;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    display: block;
+    background: #f2f5f7;
+    font-family: "Oxygen", sans-serif; }
+    .ng-frame-pager a:hover, .ng-frame-pager a:focus, .ng-frame-pager a:active {
+      color: #79b694;
+      text-decoration: none;
+      background-color: #2c4770; }
+
 .blog-author-meta {
   padding-top: 1em;
   padding-bottom: 3em;
@@ -189,8 +209,7 @@ p.blog-post-meta-category {
   color: #222; }
 
 p.blog-post-meta-tags {
-  font-size: 70%;
-  color: #40659f; }
+  font-size: 70%; }
 
 p.blog-post-meta-category a, p.blog-post-meta-tags a {
   color: #40659f;
