--- a/style.css
+++ b/style.css
@@ -188,8 +188,7 @@ ul.pager {
   .ng-frame-pager a {
     width: 100%;
     height: 100%;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
+    padding: 0.75em;
     display: block;
     background: #f2f5f7;
     font-family: "Oxygen", sans-serif; }
@@ -198,22 +197,18 @@ ul.pager {
       text-decoration: none;
       background-color: #2c4770; }
 
-.blog-author-meta {
-  padding-top: 1em;
-  padding-bottom: 3em;
+.blog-post-meta {
+  padding-top: 1.5em;
+  padding-bottom: 2em;
   background-color: #f2f5f7; }
 
-p.blog-post-meta-category {
+.blog-post-meta-date, .blog-post-meta-category, .blog-post-meta-tags {
   margin-bottom: 0.05em;
-  font-size: 70%;
-  color: #222; }
-
-p.blog-post-meta-tags {
-  font-size: 70%; }
-
-p.blog-post-meta-category a, p.blog-post-meta-tags a {
-  color: #40659f;
-  font-style: normal !important; }
+  color: #222;
+  font-size: 80%; }
+  .blog-post-meta-date a, .blog-post-meta-category a, .blog-post-meta-tags a {
+    color: #40659f;
+    font-style: normal !important; }
 
 footer.post-author-meta {
   margin-top: 2em;
@@ -227,7 +222,6 @@ footer.post-author-meta {
   -ms-border-radius: 8px;
   border-radius: 8px; }
   footer.post-author-meta img {
-    margin-top: 1em;
     margin-left: 0.5em;
     padding: 3px; }
   footer.post-author-meta h4 {
@@ -237,6 +231,8 @@ footer.post-author-meta {
     margin: 0;
     padding-top: 0;
     padding-bottom: 2em; }
+  footer.post-author-meta ul.social-links li {
+    display: inline-block; }
 
 /* /content.scss #################### */
 #sidebar {
